--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -7,37 +7,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tania emails{% endblock title %}</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'index' %}">Tania Maurino E-mails</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'eventList' %}">Eventos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">E-mails</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Invitados</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-sm-2" type="text" placeholder="Buscar">
+                        <button class="btn btn-danger my-2 my-sm-0" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <div class="container bg-secondary">
+            <div class="page-header">
+                <div class="row">
+                    <div class="col-lg-8 col-md-7 col-sm-6">
+                        <h1>{% block name %}Administración{% endblock %}</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
     {% block content %}
-    <div class="contact-title">
-        <h2 class="text-center">Administración</h2>
-    </div>
-    <div class="container d-flex justify-content-center aling-items-center bg-primary">
+    <div class="container d-flex justify-content-center aling-items-center">
         <div class="row">
-            <div class="col-12">
-                <a href="#" class="btn btn-success btn-block">Eventos</a>
+            <div class="col-auto">
+                <a href="{% url 'eventList' %}" class="btn btn-success btn-lg btn-block">Eventos</a>
             </div>
-            <div class="col-12">
-                <a href="#" class="btn btn-info btn-block">E-mails</a>
+            <div class="col-auto">
+                <a href="#" class="btn btn-info btn-lg btn-block">E-mails</a>
             </div>
-            <div class="col-12">
-                <a href="#" class="btn btn-danger btn-block">Invitados</a>
+            <div class="col-auto">
+                <a href="#" class="btn btn-danger btn-lg btn-block">Invitados</a>
             </div>
         </div>
     </div>
 
     {% endblock %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     {% block ExtraScript %}
     {% endblock ExtraScript %}
