--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block title %}Iniciar sesión{% endblock %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<!--script>window.location.href = '/administration/';</script-->
+<script>window.location.href = " {% url 'index' %}";</script>
 {% endif %}
 <style>
   .errorlist {
@@ -11,27 +11,28 @@
   }
 </style>
 <div class="container">
-    <div class="row">
+  <div class="row">
     <div class="col-md-9 mx-auto mb-5">
-        {% if 'register' in request.GET %}
-        <p style="color:green;">Usuario registrado correctamente, ya puedes identificarte.</p>
+      {% if 'register' in request.GET %}
+      <p style="color:green;">Usuario registrado correctamente, ya puedes identificarte.</p>
+      {% endif %}
+      <form action="" method="post">{% csrf_token %}
+        <h3 class="mb-4">Iniciar sesión</h3>
+        {% if form.non_field_errors %}
+        <p style="color:red">Usuario o contraseña incorrectos, prueba de nuevo.</p>
         {% endif %}
-        <form action="" method="post">{% csrf_token %}
-          <h3 class="mb-4">Iniciar sesión</h3>
-          {% if form.non_field_errors %}
-          <p style="color:red">Usuario o contraseña incorrectos, prueba de nuevo.</p>
-          {% endif %}
-          <p>
-            <input type="text" name="username" autofocus maxlength="254" required id="id_username" class="form-control"
-              placeholder="Nombre de usuario" />
-          </p>
-          <p>
-            <input type="password" name="password" required id="id_password" class="form-control" placeholder="Contraseña" />
-          </p>
-          <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
-        </form>
-      </div>
+        <p>
+          <input type="text" name="username" autofocus maxlength="254" required id="id_username" class="form-control"
+            placeholder="Nombre de usuario" />
+        </p>
+        <p>
+          <input type="password" name="password" required id="id_password" class="form-control"
+            placeholder="Contraseña" />
+        </p>
+        <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
+      </form>
     </div>
+  </div>
 </div>
 
 {% endblock %}
