--- a/main/templates/events/event-create.html
+++ b/main/templates/events/event-create.html
@@ -5,7 +5,7 @@
 {% block name %} Crear un evento {% endblock %}
 <div class="container">
     <div class="row">
-        <form action="" method="post">{% csrf_token %}
+        <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
             <fieldset>
                 <div class="form-group row">
                     {{form.as_table}}
