--- a/main/templates/guest/guests-create.html
+++ b/main/templates/guest/guests-create.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 {% load static %}
-{% block title %} Crear un e-mail {% endblock %}
+{% block title %} Crear un invitados {% endblock %}
 {% block content %}
-{% block name %} Crear un e-mail {% endblock %}
+{% block name %} Crear un invitados {% endblock %}
 <div class="container">
     <div class="row">
         <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
