--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -26,16 +26,12 @@
                             <a class="nav-link" href="{% url 'eventList' %}">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">E-mails</a>
+                            <a class="nav-link" href="{% url 'emailList' %}">E-mails</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Invitados</a>
+                            <a class="nav-link" href="{% url 'guestsList' %}">Invitados</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-sm-2" type="text" placeholder="Buscar">
-                        <button class="btn btn-danger my-2 my-sm-0" type="submit">Buscar</button>
-                    </form>
                 </div>
             </div>
         </nav>
@@ -52,20 +48,21 @@
 
     {% block content %}
     <div class="container d-flex justify-content-center aling-items-center">
+
         <div class="row">
             <div class="col-auto">
                 <a href="{% url 'eventList' %}" class="btn btn-success btn-lg btn-block">Eventos</a>
             </div>
             <div class="col-auto">
-                <a href="#" class="btn btn-info btn-lg btn-block">E-mails</a>
+                <a href="{% url 'emailList' %}" class="btn btn-info btn-lg btn-block">E-mails</a>
             </div>
             <div class="col-auto">
-                <a href="#" class="btn btn-danger btn-lg btn-block">Invitados</a>
+                <a href="{% url 'guestsList' %}" class="btn btn-danger btn-lg btn-block">Invitados</a>
             </div>
         </div>
-    </div>
 
-    {% endblock %}
+    </div>
+    {% endblock content %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
