--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -31,6 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'guestsList' %}">Invitados</a>
                         </li>
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout'%}">Salir</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
