--- a/main/templates/guest/guests.html
+++ b/main/templates/guest/guests.html
@@ -22,6 +22,8 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Evento</th>
                 <th scope="col">Email</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +33,7 @@
                 <td>{{ guest.name}}</td>
                 <td>{{ guest.event}}</td>
                 <td>{{ guest.email}}</td>
+                <td>{{guest.is_active}}</td>
                 <td>
                     <a href="{% url 'guestsUpdate' guest.slug %}" role="button"
                         class="btn btn-secondary btn-sm btn-block">Editar</a>
@@ -47,6 +50,12 @@
 {% endif %}
 <div class="d-grid gap-2">
     <a href="{% url 'guestsCreate' %}" class="btn btn-lg btn-primary" type="button">Crear un Invitado</a>
+</div>
+<div class="d-grid gap-2">
+    <a href="{% url 'guestsActivate' %}" class="btn btn-lg btn-info" type="button">Activar Invitados</a>
+</div>
+<div class="d-grid gap-2">
+    <a href="{% url 'guestDeactivate' %}" class="btn btn-lg btn-danger" type="button">Desctivar Invitados</a>
 </div>
 {% block ExtraScript %}
 <script>
